# patch-attack

./: .gitignore  README.md  pyproject.toml  tasks.py
configs/: base.yaml
configs/architectures/: README.md
docs/: DATASETS.md  segmentation_ideas.md
examples/: compare_attack_modes.py  demo_dinov3.py  demo_dinov3_attack.py  demo_segmentation_attack.py  eot_interactive.py  interactive_attack.py  video_demo.py  webcam_segmentation.py
scripts/: attack_classifier.py  eval_transferability.py  train_classifier.py  train_dataset.py  train_patch.py  visualize_sequence.py
src/: __init__.py  video_processor.py
src/attacks/: __init__.py  dinov3_attack.py  eot_attack.py  patch_attack.py  segmentation_attack.py  video_attack.py
src/data/: dataset.py
src/models/: __init__.py  dinov3_loader.py  load_model.py  test2.py
src/patch_attack/: eval_transfer.py  generate_patch.py  train_classifier.py  visualize_sequence.py
src/patch_attack/models/: dinov3_loader.py
src/patch_attack/utils/: config.py  viz.py
src/segmentation/: unsupervised.py
src/utils/: __init__.py  config.py  environment.py  metrics.py  viz.py
