[project]
name = "patch-attack"
version = "0.1.0"
description = "Adversarial patch attack on computer vision models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "torchmetrics>=1.0.0",
    "scikit-learn>=1.3.0",
    "termcolor>=2.0.0",
    "omegaconf>=2.3.0",
    "ftfy>=6.0.0",
    "regex>=2023.0.0",
    "opencv-python>=4.8.0",
    "kornia>=0.7.0",
    "ultralytics>=8.0.0",
]

[project.scripts]
train-classifier   = "patch_attack.train_classifier:main"
generate-patch     = "patch_attack.generate_patch:main"
visualize-sequence = "patch_attack.visualize_sequence:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/patch_attack/models/dinov3"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806", "N812"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["src/patch_attack/models/dinov3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

